New landing pages - orange influence

--- a/cloud_training.html
+++ b/cloud_training.html
@@ -755,75 +755,76 @@
       </ul>
     </nav>
 
-    <div class="app-pane__body app-width-container">
-      <div class="app-pane__subnav">
-        <nav class="app-subnav">
-
-          <h4 id="side-nav" class="app-subnav__theme">AWS training</h4>
-          <ul class="app-subnav__section">
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state" href="aws_training-pg1.html">AWS
-                E-Learning</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state" href="aws_training-pg3.html">Upcoming
-                AWS courses</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state" href="aws_training-pg5.html">AWS
-                certifications</a>
-            </li>
-          </ul>
-
-          <h4 id="page-content" class="app-subnav__theme">Azure training</h4>
-          <ul class="app-subnav__section">
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state" href="azure_training-pg1.html">Azure
-                E-Learning</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state"
-                href="azure_training-pg3.html">Upcoming Azure courses</a>
-            </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state" href="azure_training-pg5.html">Azure
-                certifications</a>
-            </li>
-          </ul>
-
-        </nav>
+    <div style="background-color: white; border: 10px solid #1d70b8" class="app-masthead">
+      <div class="app-width-container">
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds-from-desktop">
+            <h1 style="color: black" class="govuk-heading-xl app-masthead__title">Cloud training</h1>
+            <p style="color: black" class="app-masthead__description">Here, you will be able find and book online
+              training and cloud certifications.</p>
+          </div>
+        </div>
       </div>
+    </div>
+
+
+    <div class="app-pane__body app-width-container">
 
       <!-- Start of main body -->
       <div class="app-pane__content">
-        <main id="main-content" class="app-content" role="main">
+        <main id="main-content" class="app-content" role="main" style="padding-left: 0px;">
 
           <div class="govuk-grid-row">
 
-            <div class="govuk-breadcrumbs ">
-              <ol class="govuk-breadcrumbs__list">
-                <li class="govuk-breadcrumbs__list-item">
-                  <a class="govuk-breadcrumbs__link" href="index.html">Home</a>
+            <div style="max-width: 370px; padding: 10px; margin: 1px; background-color:	#f3f2f1; border: 7px solid #f47738; border-radius: 20px;" class="govuk-grid-column-one-third">
+              <h3 class="govuk-heading-m">AWS training</h3>
+              <ul class="govuk-list">
+                <li>
+                  <a class="govuk-link" href="aws_training-pg1.html">AWS E-Learning</a>
                 </li>
-                <li class="govuk-breadcrumbs__list-item">
-                  <a class="govuk-breadcrumbs__link" href="cloud_training.html">Cloud training</a>
+                <li>
+                  <a class="govuk-link" href="aws_training-pg3.html">Upcoming AWS courses</a>
                 </li>
+                <li>
+                  <a class="govuk-link" href="aws_training-pg5.html">AWS certifications</a>
+                </li>
+              </ul>
             </div>
 
-            <h1 id="h1_title" class="govuk-heading-xl">Cloud training</h1>
+            <div style="max-width: 370px; padding: 10px; margin: 1px; background-color:	#f3f2f1; border: 7px solid #f47738; border-radius: 20px;" class="govuk-grid-column-one-third">
+              <h3 class="govuk-heading-m">Azure training</h3>
+              <ul class="govuk-list">
+                <li>
+                  <a class="govuk-link" href="azure_training-pg1.html">Azure E-Learning</a>
+                </li>
+                <li>
+                  <a class="govuk-link" href="azure_training-pg3.html">Upcoming Azure courses</a>
+                </li>
+                <li>
+                  <a class="govuk-link" href="azure_training-pg5.html">Azure certifications</a>
+                </li>
+              </ul>
+            </div>
 
-            <!-- Start of training in the ho section -->
-            <p class="govuk-body">Here, you will be able find and book online training and cloud certifications. The Home Office does not provide cloud training directly. Instead, we have professional training supplied by our cloud providers and training websites. Our cloud providers have engaged with us to provide free training for Home Office staff and contractors. So, we need to make sure we are taking advantage of this opportunity.</p>
+          </div>
+
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+            <p class="govuk-body">The Home Office does not provide cloud training directly. Instead, we have
+              professional training supplied by our cloud providers and training websites. Our cloud providers have
+              engaged with us to provide free training for Home Office staff and contractors. So, we need to make sure
+              we are taking advantage of this opportunity.</p>
 
             <!-- Hidden back to nav link </a> -->
             <a href="#side-nav" class="govuk-skip-link">Back to side navigation</a>
 
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-            <!-- Start of types of training section -->
             <h2 id="types_of_training" class="govuk-heading-l">Types of training available</h2>
             <h3 class="govuk-heading-m">Cloud providers training </h3>
-            <p class="govuk-body"> Our cloud providers offer free e-learning which is available to everybody. There is also instructor-led training, which is initially prioritised for Home Office employees, but is also available to contractors. For more information on training visit the AWS and Azure training pages.</p>
+            <p class="govuk-body"> Our cloud providers offer free e-learning which is available to everybody. There is
+              also instructor-led training, which is initially prioritised for Home Office employees, but is also
+              available to contractors. For more information on training visit the AWS and Azure training pages.</p>
 
             <h3 class="govuk-heading-m">Cloud academy</h3>
             <p class="govuk-body">For Cloud Academy’s e-learning platform visit <a href="https://cloudacademy.com"
@@ -837,8 +838,6 @@
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
             <a href="#top" class="govuk-link">Back to top</a>
-
-          </div>
 
         </main>
 
@@ -855,7 +854,7 @@
 
     </div>
 
-    <footer class="govuk-footer app-footer app-footer--full" role="contentinfo">
+    <footer style="border-top: 10px solid #f47738" class="govuk-footer app-footer app-footer--full" role="contentinfo">
       <div class="govuk-width-container app-width-container">
 
         <div class="govuk-footer__navigation">
