--- a/index.html
+++ b/index.html
@@ -775,20 +775,20 @@
 
           <div class="govuk-grid-row">
 
-            <div style="padding-bottom: 15px;" class="govuk-grid-column-one-third">
-              <h2 class="govuk-heading-l">Cloud training</h2>
+            <div style="max-width: 370px; padding: 10px; margin: 1px; background-color:	#f3f2f1; border: 7px solid #f47738; border-radius: 20px;" class="govuk-grid-column-one-third">
+              <h3 class="govuk-heading-m">Cloud training</h3>
               <p class="govuk-body">Book cloud training for you or your team through our cloud providers</p>
               <a href="cloud_training.html" class="govuk-link">Browse Cloud training</a>
             </div>
 
-            <div style="padding-bottom: 15px;" class="govuk-grid-column-one-third">
-              <h2 class="govuk-heading-l">Cloud guidance</h2>
+            <div style="max-width: 370px; padding: 10px; margin: 1px; background-color:	#f3f2f1; border: 7px solid #f47738; border-radius: 20px;" class="govuk-grid-column-one-third">
+              <h3 class="govuk-heading-m">Cloud guidance</h3>
               <p class="govuk-body">View bespoke Home Office Cloud guidance</p>
               <a href="cloud_guidance.html" class="govuk-link">Browse Cloud guidance</a>
             </div>
 
-            <div style="padding-bottom: 15px;" class="govuk-grid-column-one-third">
-              <h2 class="govuk-heading-l">PCT services</h2>
+            <div style="max-width: 370px; padding: 10px; margin: 1px; background-color:	#f3f2f1; border: 7px solid #f47738; border-radius: 20px;" class="govuk-grid-column-one-third">
+              <h3 class="govuk-heading-m">PCT services</h3>
               <p class="govuk-body">View how to create Identity and Access Management (IAM) account requests</p>
               <a href="public_cloud_services.html" class="govuk-link">Browse Public Cloud services</a>
             </div>
@@ -797,19 +797,9 @@
 
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-          <!-- <div class="govuk-breadcrumbs">
-              <ol class="govuk-breadcrumbs__list">
-                <li class="govuk-breadcrumbs__list-item">
-                  <a class="govuk-breadcrumbs__link" href="index.html">CCoE (Home)</a>
-                </li>
-              </ol>
-            </div> -->
-
           <div class="govuk-grid-row">
+
             <div class="govuk-grid-column-two-thirds" style="padding-top: 35px;">
-              <!-- <h1 class="govuk-heading-xl">Public Cloud Team</h1> -->
-              <!-- <h1 style="display: flex; justify-content: center; align-items: center; height: 300px;"
-                class="govuk-heading-xl">Public Cloud Team</h1> -->
               <h2 class="govuk-heading-l">Public Cloud Team</h2>
               <p class="govuk-body-l">This service has been created by the Public Cloud Team (PCT) and it is replacing the
                 Public Cloud confluence area.</p>
@@ -818,8 +808,10 @@
             <div class="govuk-grid-column-one-third">
               <img style="border: none; padding: none; max-width: 200px;" src="images/turtle_sticker.svg" alt="Public Cloud Team Logo">
             </div>
+
           </div>
 
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           
           <h2 id="service_overview" class="govuk-heading-l">About us</h2>
           <p class="govuk-body">The Public Cloud Team are an agile team based in Manchester and Croydon. Our roles in
@@ -837,15 +829,6 @@
 
           <a href="#top" class="govuk-link">Back to top</a>
 
-          <!-- <div class="app-contact-panel">
-            <h2 class="app-contact-panel__heading">Need help?</h2>
-            <p class="govuk-body app-contact-panel__body">If you’ve got a question about the Cloud Center of
-              Excellence, <a class="govuk-link" href="#">contact the team</a>.
-            </p>
-          </div> -->
-
-          <!-- <div style="background-color: orange;" class="app-contact-panel"></div> -->
-
         </main>
 
       </div>
@@ -861,7 +844,7 @@
 
     </div>
 
-    <footer class="govuk-footer app-footer app-footer--full" role="contentinfo">
+    <footer style="border-top: 10px solid #f47738" class="govuk-footer app-footer app-footer--full" role="contentinfo">
       <div class="govuk-width-container app-width-container">
 
         <div class="govuk-footer__navigation">
