--- a/operational_guidance-detective.html
+++ b/operational_guidance-detective.html
@@ -1145,7 +1145,7 @@
         </div>
       </div>
 
-      <footer
+      <footer style="border-top: 10px solid orange"
         class="govuk-footer app-footer app-footer--full"
         role="contentinfo"
       >
