--- a/operational_guidance-prev-guardrails.html
+++ b/operational_guidance-prev-guardrails.html
@@ -1186,7 +1186,7 @@
         </div>
       </div>
 
-      <footer
+      <footer style="border-top: 10px solid orange"
         class="govuk-footer app-footer app-footer--full"
         role="contentinfo"
       >
