--- a/public_cloud_services.html
+++ b/public_cloud_services.html
@@ -754,6 +754,18 @@
       </ul>
     </nav>
 
+    <div style="background-color: white; border: 10px solid #f47738" class="app-masthead">
+      <div class="app-width-container">
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-two-thirds-from-desktop">
+            <h1 style="color: black" class="govuk-heading-xl app-masthead__title">Public cloud services</h1>
+            <p style="color: black" class="app-masthead__description">This system will help cloud users find guidance, book cloud training
+              and use Public Cloud Team (PCT) services.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="app-pane__body app-width-container">
       <div class="app-pane__subnav">
         <nav class="app-subnav">
@@ -844,7 +856,7 @@
 
     </div>
 
-    <footer class="govuk-footer app-footer app-footer--full" role="contentinfo">
+    <footer style="border-top: 10px solid #f47738" class="govuk-footer app-footer app-footer--full" role="contentinfo">
       <div class="govuk-width-container app-width-container">
 
         <div class="govuk-footer__navigation">
