--- a/security_guidance-pg1.html
+++ b/security_guidance-pg1.html
@@ -938,7 +938,7 @@
 
     </div>
 
-    <footer class="govuk-footer app-footer app-footer--full" role="contentinfo">
+    <footer style="border-top: 10px solid orange" class="govuk-footer app-footer app-footer--full" role="contentinfo">
       <div class="govuk-width-container app-width-container">
 
         <div class="govuk-footer__navigation">
