--- a/cloud_guidance.html
+++ b/cloud_guidance.html
@@ -753,6 +753,19 @@
         </ul>
       </nav>
 
+      <div style="background-color: white; border: 10px solid #1d70b8" class="app-masthead">
+        <div class="app-width-container">
+          <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds-from-desktop">
+              <h1 style="color: black" class="govuk-heading-xl app-masthead__title">Cloud guidance</h1>
+              <p style="color: black" class="app-masthead__description">This system will help cloud users find guidance,
+                book cloud training
+                and use Public Cloud Team (PCT) services.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="app-pane__body app-width-container">
         <div class="app-pane__subnav">
           <nav class="app-subnav">
@@ -765,66 +778,43 @@
                   href="operational_guidance-pg1.html">Operational excellence pillar</a>
               </li>
               <li class="app-subnav__section-item">
-                <a
-                  class="app-subnav__link govuk-link govuk-link--no-visited-state"
-                  href="operational_guidance-pg2.html"
-                  >AWS organisations</a>
+                <a class="app-subnav__link govuk-link govuk-link--no-visited-state"
+                  href="operational_guidance-pg2.html">AWS organisations</a>
               </li>
 
               <li class="app-subnav__section-item">
-                <a
-                  class="app-subnav__link govuk-link govuk-link--no-visited-state"
-                  href="operational_guidance-ou.html"
-                  >OU structure</a
-                >
+                <a class="app-subnav__link govuk-link govuk-link--no-visited-state"
+                  href="operational_guidance-ou.html">OU structure</a>
               </li>
 
               <li class="app-subnav__section-item">
-                <a
-                  class="app-subnav__link govuk-link govuk-link--no-visited-state"
-                  href="operational_guidance-prev-guardrails.html"
-                  >Preventive guardrails</a
-                >
+                <a class="app-subnav__link govuk-link govuk-link--no-visited-state"
+                  href="operational_guidance-prev-guardrails.html">Preventive guardrails</a>
               </li>
 
               <li class="app-subnav__section-item">
-                <a
-                  class="app-subnav__link govuk-link govuk-link--no-visited-state"
-                  href="operational_guidance-detective.html"
-                  >Detective guardrails</a
-                >
+                <a class="app-subnav__link govuk-link govuk-link--no-visited-state"
+                  href="operational_guidance-detective.html">Detective guardrails</a>
               <li class="app-subnav__section-item">
-                <a
-                  class="app-subnav__link govuk-link govuk-link--no-visited-state"
-                  href="operational_guidance-pg3.html"
-                  >Tagging standards</a
-                >
+                <a class="app-subnav__link govuk-link govuk-link--no-visited-state"
+                  href="operational_guidance-pg3.html">Tagging standards</a>
               </li>
             </ul>
             <h4 class="app-subnav__theme">Security</h4>
             <ul class="app-subnav__section">
               <li class="app-subnav__section-item">
-                <a
-                  class="app-subnav__link govuk-link govuk-link--no-visited-state"
-                  href="security_guidance-pg1.html"
-                  >Security pillar</a
-                >
+                <a class="app-subnav__link govuk-link govuk-link--no-visited-state"
+                  href="security_guidance-pg1.html">Security pillar</a>
               </li>
 
               <li class="app-subnav__section-item">
-                <a
-                  class="app-subnav__link govuk-link govuk-link--no-visited-state"
-                  href="security_guidance-pg2.html"
-                  >Cloud shared responsibility model</a
-                >
+                <a class="app-subnav__link govuk-link govuk-link--no-visited-state"
+                  href="security_guidance-pg2.html">Cloud shared responsibility model</a>
               </li>
 
               <li class="app-subnav__section-item">
-                <a
-                  class="app-subnav__link govuk-link govuk-link--no-visited-state"
-                  href="security_guidance-pg3.html"
-                  >Access keys</a
-                >
+                <a class="app-subnav__link govuk-link govuk-link--no-visited-state"
+                  href="security_guidance-pg3.html">Access keys</a>
               </li>
             </ul>
 
@@ -1061,10 +1051,10 @@
                 overview of the five pillars and access to whitepapers that provide detailed information about each of
                 the five pillars of the Well-Architected Framework.</p>
               <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
-                <li> <a href="https://aws.amazon.com/blogs/apn/the-5-pillars-of-the-aws-well-architected-framework/"
-                    target="_blank">AWS Well Architected Framework</a></li>
-                <li> <a href="https://docs.microsoft.com/en-us/azure/architecture/framework/" target="_blank">Microsoft
-                    Azure Well Architected Framework</li>
+                <li> <a href="https://aws.amazon.com/blogs/apn/the-5-pillars-of-the-aws-well-architected-framework/">AWS
+                    Well Architected Framework</a></li>
+                <li> <a href="https://docs.microsoft.com/en-us/azure/architecture/framework/">Microsoft Azure Well
+                    Architected Framework</li>
               </ul>
 
               <!-- Hidden back to nav link </a> -->
@@ -1091,7 +1081,7 @@
 
       </div>
 
-      <footer class="govuk-footer app-footer app-footer--full" role="contentinfo">
+      <footer style="border-top: 10px solid #f47738" class="govuk-footer app-footer app-footer--full" role="contentinfo">
         <div class="govuk-width-container app-width-container">
 
           <div class="govuk-footer__navigation">
