--- a/cost_guidance-pg1.html
+++ b/cost_guidance-pg1.html
@@ -1113,10 +1113,7 @@
         </div>
       </div>
 
-      <footer
-        class="govuk-footer app-footer app-footer--full"
-        role="contentinfo"
-      >
+      <footer style="border-top: 10px solid orange" class="govuk-footer app-footer app-footer--full" role="contentinfo">
         <div class="govuk-width-container app-width-container">
           <div class="govuk-footer__navigation">
             <div class="govuk-footer__section">
