--- a/reliability_guidance-pg1.html
+++ b/reliability_guidance-pg1.html
@@ -1098,7 +1098,7 @@
         </div>
       </div>
 
-      <footer
+      <footer style="border-top: 10px solid orange"
         class="govuk-footer app-footer app-footer--full"
         role="contentinfo"
       >
